# agents-lab

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/auto_examples/: index.doctree  plot_01_scraping_workflow.doctree  plot_02_rag_agent.doctree  plot_scraping_workflow.doctree
.github/workflows/: push_doc.yml
_downloads/1f9fd5595789437ff2cf6805cc5480ca/: plot_01_scraping_workflow.ipynb
_downloads/b32420cf16f2ef3e676c979b1cf4b92f/: plot_scraping_workflow.ipynb
_downloads/c6812623dfba9733117152e321e205f5/: plot_02_rag_agent.ipynb
_downloads/f7aaa2e1952df88cccc9cf7a789f4961/: plot_scraping_workflow.py
_sources/: index.rst.txt
_sources/auto_examples/: index.rst.txt  plot_01_scraping_workflow.rst.txt  plot_02_rag_agent.rst.txt  plot_scraping_workflow.rst.txt
auto_examples/: index.html  plot_01_scraping_workflow.html  plot_02_rag_agent.html  plot_scraping_workflow.html
doc/: Makefile  conf.py  index.rst
doc/_static/: lbc_HTML_DOM.txt
examples/: README.rst  plot_01_scraping_workflow.py  plot_02_rag_agent.py  plot_scraping_workflow.py
notebooks/: scraping.py
