[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-lab"
dynamic = ["version"]
description = "Testing agents framework and techniques"
authors = [
    { name="Vincent Maladiere", email="maladiere.vincent@gmail.com"},
]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }

[project.optional-dependencies]

doc = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-gallery",
    "sphinx-design",
    "sphinx-copybutton",
    "numpydoc",
    "pydantic-ai",
    "nest_asyncio",
    "selenium",
    "requests",
    "beautifulsoup4",
]